<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.WakingUpFromSleepFragment"
    android:background="@color/pink">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ayat wake up from sleep"/>

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="أذكار الاستيقاظ من النوم "-->
<!--        android:textColor="@color/purpule"-->
<!--        android:textSize="28sp"-->
<!--        android:textStyle="bold|italic"-->
<!--        android:padding="25dp"-->
<!--        android:layout_margin="20dp"-->
<!--        android:gravity="center"-->
<!--        />-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:text="@string/tv1_noomWeakUp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/purpule"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:text="@string/tv2_noomWeakUp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/purpule"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:text="@string/tv3_noomWeakUp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/purpule"
        android:gravity="center"
        />

</LinearLayout>